# fieldclimate-collector

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  config.yaml  config.yaml.example  debug_auth.py  hmac_example.py  pyproject.toml  requirements.txt  setup.py
dashboards/: README.md  _brand.yml  overview.qmd  station.qmd
dashboards/assets/: styles.scss
dashboards/scripts/: dashboard_helpers.py
fieldclimate/: __init__.py  cli.py
fieldclimate/collector/: __init__.py  api_client.py  data_collector.py  station_manager.py
fieldclimate/config/: __init__.py  config_manager.py
fieldclimate/database/: __init__.py  db_manager.py  models.py
fieldclimate/utils/: __init__.py  error_handler.py  helpers.py  logging.py
