[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldclimate-collector"
version = "0.1.0"
description = "Collects weather data from Pessl's FieldClimate platform"
authors = [
    {name = "Rolf Morgenstern", email = "morgenstern.rolf@fh-swf.de"},
]
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.25.0",
    "pyyaml>=5.1",
    "sqlite-utils>=3.0",
    "python-dateutil>=2.8.1",
    "click>=7.1.2",
]

[project.scripts]
fieldclimate-collector = "fieldclimate.cli:main"
